--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -134,6 +134,7 @@ code {
     border: 1px solid $grey-color-light;
     border-radius: 3px;
     background-color: #eef;
+    text-align: left;
 }
 
 code {
