--- a/_includes/twitter-card.html
+++ b/_includes/twitter-card.html
@@ -1,8 +1,8 @@
 <meta name="twitter:card" content="summary_large_image">
   {% if page.cover %}
-  <meta name="twitter:image:src" content="{{ page.cover | prepend: '/assets/' | prepend: site.baseurl }}">
+  <meta name="twitter:image:src" content="{{ page.cover | prepend: '/assets/' | prepend: site.baseurl | prepend: site.url}}">
   {% else %}
-  <meta name="twitter:image:src" content="{{ '/assets/main/zayno-urahara-kisuke-tux.png' | prepend: site.baseurl }}">
+  <meta name="twitter:image:src" content="{{ '/assets/main/zayno-urahara-kisuke-tux.png' | prepend: site.baseurl | prepend: site.url}}">
   {% endif %}
   <meta name="twitter:site" content="@danialbehzadi">
   <meta name="twitter:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}">
